--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.2",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
