--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.2",
+    "react-star-ratings": "^2.3.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.4.2",
+    "@types/react-star-ratings": "^2.3.0",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
