--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "axios": "^0.26.1",
+    "dateformat": "^5.0.3",
     "flowbite": "^1.4.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.8.0",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dateformat": "^5.0.0",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-star-ratings": "^2.3.0",
     "autoprefixer": "^10.4.4",
